--- a/W5D5/movie_buff/Gemfile
+++ b/W5D5/movie_buff/Gemfile
@@ -43,6 +43,15 @@ group :development, :test do
   gem 'pry-rails'
   gem 'rspec-rails', '~> 3.5'
   gem 'activerecord-import'
+
+   # Run 'bundle exec annotate' in Terminal to add helpful comments to models.
+  gem 'annotate'
+
+  # These two give you a great error handling page.
+  # But make sure to never use them in production!
+  gem 'better_errors'
+  gem 'binding_of_caller'
+
 end
 
 group :development do
