--- a/W10D2/widgets/package.json
+++ b/W10D2/widgets/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cli": "^1.0.1",
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
@@ -20,7 +22,6 @@
     "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "redux": "^4.0.5",
-    "webpack": "^4.46.0"
+    "redux": "^4.0.5"
   }
 }
