--- a/W11D2/pokedex_part_1_attempt_2/package.json
+++ b/W11D2/pokedex_part_1_attempt_2/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "webpack": "webpack --watch --mode=development", 
+    "webpack": "webpack --watch --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
     "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
